--- a/static/style.css
+++ b/static/style.css
@@ -5,12 +5,17 @@ a {
 }
 
 div {
-  border-color: rgb(162, 162, 162);
+  background-color: rgb(206, 114, 189);
+  border-color: rgb(255, 255, 255);
   border-style: solid;
   border-width: 1px 1px 1px 1px;
   border-radius: 5px;
   margin: 5px;
   padding: 10px;
+}
+
+html {
+  background-color: rgb(18, 18, 18);
 }
 
 /* classes */
